--- a/pom.xml
+++ b/pom.xml
@@ -44,9 +44,9 @@
             <version>5.0.2</version>
         </dependency>
         <dependency>
-            <groupId>com.h2database</groupId>
-            <artifactId>h2</artifactId>
-            <scope>runtime</scope>
+            <groupId>org.postgresql</groupId>
+            <artifactId>postgresql</artifactId>
+            <version>42.2.9</version>
         </dependency>
         <dependency>
             <groupId>org.projectlombok</groupId>
