--- a/pom.xml
+++ b/pom.xml
@@ -54,6 +54,11 @@
             <version>1.18.8</version>
             <optional>true</optional>
         </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-actuator</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
